kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jollof-run
  labels:
    name: jollof-run
    app.kubernetes.io/part-of: jollof-run
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
